tests: configuração para ignorar alguns arquivos para a coleta do coverage

--- a/package.json
+++ b/package.json
@@ -61,6 +61,12 @@
       "json",
       "ts"
     ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/",
+      ".*\\.module\\.ts$",
+      "main.ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
