test: Ajustei o teste de createUser da camada de controller

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       ".*\\.module\\.ts$",
       ".*\\.entity\\.ts$",
       ".*\\.dto\\.ts$",
+      ".*\\.mock\\.ts$",
       "main.ts"
     ],
     "rootDir": "src",
